add a remoteFlush api to check the si's availability
Committed-by: bingqing.lbq from Dev container
